# demon-cry

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example_config.json  pyproject.toml  requirements.txt
.github/workflows/: docker-release.yml
core/: __init__.py  __main__.py  config.py  llm.py  module_registry.py
core/api/: health.py  investigate.py  router.py  tools.py
core/prompts/: system.md
docs/: configuration.md  development.md  docker.md  searxng.md
modules/: base_modules.py  parse_website.py  web_search.py
searxng/: settings.yml
